# cumf_als

./: .appveyor.yml  .gitignore  .travis.linux.sh  .travis.osx.sh  .travis.yml  CMakeLists.txt  Makefile  als.h  appveyor.yml  cg.h  sonar-project.properties
data/jester/: prepare_jester_data.py
data/ml10M/: prepare_ml10M_data.py
data/ml20M/: prepare_ml20M_data.py
data/netflix/: prepare_netflix_data.py
data/yahoor1/: prepare_data.py  pythonscript.py
hugewiki/: Makefile  common.h  hugewiki.cu
results/: jester_results.txt  ml10_results.txt  ml20_results.txt  netflix_results.txt  yahooc15_results.txt
scripts/: commands.sh  getRuntime.sh  hermitiantime.sh  print-test-result.sh  solvertime.sh  test_als.sh
src/: Makefile  als.cu  cg.cu  cg.h  device_utilities.cu  device_utilities.h  host_utilities.cpp  host_utilities.h  main.cpp
tensorflow/: build_tf_op.sh  cumf_as_tensorflow_ops_test.py
